# AutoTrade

./: .gitignore  .graphifyignore  AGENTS.md  pyproject.toml
docs/: architecture.md  autotrade.env.example  cli_run_continuous_flow.md  coding-standards.md  live_cycle.env.example  operations.md  recommendation_metadata.md  roadmap.md  stock_recommender_plan.md  testing.md  weekly_recommendation_universe.example.csv  workflow.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
src/autotrade/: __init__.py  cli.py
src/autotrade/broker/: __init__.py  exceptions.py  korea_investment.py  normalization.py  paper.py  readers.py  smoke.py  trading.py
src/autotrade/common/: __init__.py  models.py  persistence.py  price_ticks.py
src/autotrade/config/: __init__.py  loader.py  models.py
src/autotrade/data/: __init__.py  calendar.py  collection.py  contracts.py  krx_holidays.py  models.py  storage.py  universe.py  validation.py
src/autotrade/execution/: __init__.py  backtest.py  live.py  replay.py
src/autotrade/portfolio/: __init__.py  backtest.py
src/autotrade/recommendation/: __init__.py  approvals.py  engine.py  kis_seed_universe.py  models.py  reporting.py  service.py  universe.py
src/autotrade/report/: __init__.py  backtest.py  notifiers.py  operation_alerts.py  operation_builders.py  operation_models.py  (+3 more)
tests/fixtures/: README.md
tests/unit/: test_cli.py
tools/: README.md  broker_smoke_check.py  build_kis_seed_universe.py  daily_inspection.py  live_cycle.py  operations.py  weekly_review.py
tools/krx_holidays/: README.md  convert_holidays.py
(+74 files in other folders)
