[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "autotrade"
version = "0.1.0"
description = "Automation and validation tooling for AutoTrade."
readme = "docs/roadmap.md"
requires-python = ">=3.14,<3.15"

[project.optional-dependencies]
dev = [
    "mypy>=1.11",
    "pytest>=8.3",
    "ruff>=0.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py314"

[tool.mypy]
files = ["src"]
python_version = "3.14"

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
